clang/test/BSC/Negative/Ownership/RuleCheck/return/return.cbs
// RUN: %clang_cc1 -verify %s

struct A {};

void func4(int * _Owned a) {
	return;
	int * b = (int *)a;
} // expected-error {{memory leak of value: `a`}}

void func5(int num) {
	int b = 5;
	int * _Owned p = (int * _Owned)&b;
	int * _Owned a;
	if (num > 0) {
		a = p;
	} else {
		return; // expected-error {{memory leak of value: `p`}}
	}
} // expected-error {{memory leak of value: `a`}}

void func(struct A * _Owned a) {
	struct A * _Owned b = a;
} // expected-error {{memory leak of value: `b`}}

void func9(int * _Owned a) {
	{
		int * p = (int *)a;
	}
	{
		int * _Owned q = a; // expected-error {{use of moved value: `a`}}
	} // expected-error {{memory leak of value: `q`}}
}

_Bool owned_cannot_return_as_bool(int *_Owned _Nullable p) {
	return p;
} // expected-error {{memory leak of value: `p`}}

_Bool borrow_can_return_as_bool(int *_Borrow _Nullable p) {
	return p;
}

int main() {
	return 0;
}